tests/NormalTests/paczka1/fuzzy1/62328641.err
Error in line 1: Uh8AGi9ZG3 A247 63,5
Error in line 20: A107 S546 83,6
Error in line 36: kNsoY A107 7,8
